dfir_rs/tests/compile-fail/nightly/surface_singleton_mutation.stderr
error[E0070]: invalid left-hand side of assignment
 --> tests/compile-fail/nightly/surface_singleton_mutation.rs:9:33
  |
8 |             -> map(|x| {
  |                --- cannot assign to this expression
9 |                 #max_of_stream2 = 999;
  |                                 ^
